# ROS2-SlamBot-using-RaspberryPI

./: README.md  Where am i  + What to DO
robot_driving_src/Chapter09/: go_to_xy.cpp
rpi_car/: CMakeLists.txt  package.xml
rpi_car/cmd_vel_to_PWM/: cmd_vel_to_PWM.ino
rpi_car/launch/: bot_gazebo.launch
rpi_car/scripts/: 1_Line_detector.py  2_Facedetection_controll_bot.py  2a_cam_publisher.py  3_point_to_point.py  3a_text_recognize.py
rpi_car/urdf/: bot.urdf
slamBot/: CMakeLists.txt  package.xml
slamBot/src/basic_interfacing/: 1_pub.cpp  5_cmd_vel_driver.cpp
slam_bot/: CMakeLists.txt  package.xml
slam_bot/src/: enc_publisher.cpp  teleop_drive.cpp
slam_bot/src/basic_interfacing/car/: encoders.cpp  motor_motion.cpp
slam_bot/src/basic_interfacing/ros/: 2_sub.cpp  3_pub_sub_class.cpp  4_vel_pub.cpp  5_cmd_drive.cpp  5_cmd_vel_driver.cpp  occupancy_grid.cpp
